<resources>
    <!--Fonts-->
    <string name="Roboto_Light" translatable="false">sans-serif-light</string>
    <string name="Roboto_Medium" translatable="false">sans-serif-medium</string>
    <string name="Roboto_Regular" translatable="false">sans-serif</string>

    <string name="app_name">Insulin App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Калькулятор</string>
    <string name="products">Продукты</string>
    <string name="about_system">О системе…</string>
    <string name="step_up_case">ШАГ</string>
    <string name="card_products_for_every_day_additional_text">Списки продуктов повседневной жизни</string>
    <string name="itemOfGroup">Рестораны</string>
    <string name="card_restaurant_additional_text">Меню наиболее популярных ресторанов</string>
    <string name="b">Б: </string>
    <string name="j">Ж: </string>
    <string name="y">У: </string>
    <string name="search">Поиск</string>
    <string name="list_products">Список продуктов</string>
    <string name="enter_product_name">Введите название продукта</string>
    <string name="back">Назад</string>
    <string name="compute">Расчитать</string>
    <string name="result">Итого</string>
    <string name="b_j_y">Б/Ж/У (г)</string>
    <string name="kcal">Ккал</string>
    <string name="common_weight">Общий вес (г)</string>
    <string name="sumInsulin">Инсулин (мг)</string>
    <string name="save">Сохранить</string>
    <string name="bread_items">Хлебные единицы (хе)</string>
    <string name="set_weight">Установите вес</string>
    <string name="add">добавить</string>
    <string name="amount">Кол-во</string>
    <string name="x">x</string>
    <string name="gram">г</string>
    <string name="sumWeight">Вес</string>
    <string name="null_value">Нулевое значение</string>
    <string name="gi">ГИ</string>
    <string name="k_two">K2</string>
    <string name="k_one">K1</string>
    <string name="he">ХЕ</string>
    <string name="index">Настройки</string>
    <string name="indexes">Показатели</string>
    <string name="cancel">отмена</string>
    <string name="favorite">избранное</string>
    <string name="main_indexes">Основные показатели</string>
    <string name="categories">Категории</string>
    <string name="g_index">Гликемический индекс</string>
    <string name="insulin_app">Insulin App</string>

    <string name="preferences_count_key" translatable="false">count_key</string>
    <string name="preferences_count_value" translatable="false">count_value</string>

    <string name="preferences_first_key" translatable="false">first_start_key</string>
    <string name="preferences_first_value" translatable="false">first_start_value</string>

    <string name="preferences_attention_key" translatable="false">attention_key</string>
    <string name="preferences_attention_value" translatable="false">attention_value</string>
    <string name="warning">Предупреждение</string>
    <string name="warning_text">
        Программа для подсчета инсулина создана исключительно
        в личных целях. Не несет рекомендательного характера для
        лечения сахарного диабета. Настоятельно рекомендуется
        проверять расчеты самостоятельно. Разработчики данной программы
        не несут ответственности за Ваше здоровье.
    </string>
    <string name="not_show_again">Больше не показывать</string>
    <string name="ok">ok</string>
    <string name="info_system">Общая информация о системе</string>
    <string name="app_for_text">Приложение расчета единиц инсулина для больных диабетом I типа</string>
    <string name="version_app">Версия приложения</string>
    <string name="insulin_app_version">Версия Insulin App:</string>
    <string name="contacts">Контакты</string>
    <string name="kolinloures_gmail_com">kolinloures@gmail.com</string>
    <string name="diary">Дневник</string>

</resources>
