<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calculator_item"
            android:checked="true"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/calculator" />
        <item
            android:id="@+id/product_item"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/products" />
        <item
            android:id="@+id/index_item"
            android:icon="@drawable/ic_settings_black_24px"
            android:title="@string/indexes" />
        <item
            android:id="@+id/about_system_item"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_system" />
    </group>
</menu>