<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.kolin.testapplication.presentation.about.AboutFragment">

    <TextView
        style="@style/textViewTitleCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:drawableStart="@drawable/ic_star_black_24dp"
        android:text="@string/insulin_app" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_system"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        style="@style/topTextViewRvItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_for_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/version_app"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/topTextViewRvItem"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/insulin_app_version" />

        <TextView
            style="@style/textViewName"
            android:id="@+id/fragment_about_version_app"
            android:textColor="@color/colorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="1.0" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contacts"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        style="@style/topTextViewRvItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kolinloures_gmail_com" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_injection"
            android:layout_gravity="bottom|end"/>

    </FrameLayout>

</LinearLayout>
