<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_spinner_name_character"
        style="@style/topTextViewRvItemLeft"
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:text="Название продукта"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_spinner_he"
            style="@style/textViewCalculationItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2.0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_spinner_k_one"
            style="@style/textViewCalculationItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2.0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_spinner_k_two"
            style="@style/textViewCalculationItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2.0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_spinner_gi"
            style="@style/textViewCalculationItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2.0"
            android:textSize="14sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            style="@style/textViewCalculationItemBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/he"
            android:textSize="14sp" />

        <TextView
            style="@style/textViewCalculationItemBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_one"
            android:textSize="14sp" />

        <TextView
            style="@style/textViewCalculationItemBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_two"
            android:textSize="14sp" />

        <TextView
            style="@style/textViewCalculationItemBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gi"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>