<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="350dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="24dp"
    tools:context=".presentation.common.weightdialog.WeightFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_weight_title"
            style="@style/textViewTitleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_weight" />

        <TextView
            android:id="@+id/dialog_weight_product_name"
            style="@style/textViewSupportingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="24dp"
            android:text="Какое то название продукта" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="@string/sumWeight"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dialog_weight_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"/>


            <EditText
                android:id="@+id/dialog_weight_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/dialog_weight_error_weight"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="@string/null_value"
                android:textColor="@color/red"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:id="@+id/dialog_weight_error_count"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/null_value"
                android:textColor="@color/red"
                android:textSize="12sp" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="end|center_vertical">

                <Button
                    android:id="@+id/dialog_weight_btn_back"
                    style="@style/btnStyleDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/dialog_weight_btn_add"
                    style="@style/btnStyleDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/add" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
