<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue500"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/item_index_name"
                style="@style/textViewTitleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Утро"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                style="@style/textViewCalculationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/he"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_index_he"
                style="@style/textViewCalculationItemBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2.0"
                android:textSize="14sp" />

            <TextView
                style="@style/textViewCalculationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gi"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_index_gi"
                style="@style/textViewCalculationItemBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2.0"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                style="@style/textViewCalculationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/k_one"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_index_k_one"
                style="@style/textViewCalculationItemBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2.0"
                android:textSize="14sp" />

            <TextView
                style="@style/textViewCalculationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/k_two"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_index_k_two"
                style="@style/textViewCalculationItemBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2.0"
                android:textSize="14sp" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <ImageButton
                    android:id="@+id/item_index_btn_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_create_black_24dp"
                    android:text="@string/back" />

                <ImageButton
                    android:id="@+id/item_index_btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:text="@string/compute" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>