<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kolin.testapplication.presentation.firststar.FirstStartActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/first_start_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bread_items"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/first_start_edit_he"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/first_start_he_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/null_value"
            android:textAlignment="textEnd"
            android:textColor="@color/red"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_index"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/first_start_edit_gi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/first_start_gi_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/null_value"
            android:textAlignment="textEnd"
            android:textColor="@color/red"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_one"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/first_start_edit_k_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/first_start_k_one_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/null_value"
            android:textAlignment="textEnd"
            android:textColor="@color/red"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_two"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/first_start_edit_k_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/first_start_k_two_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/null_value"
            android:textAlignment="textEnd"
            android:textColor="@color/red"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/first_start_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimaryDark" />

    </FrameLayout>

</LinearLayout>
